fix header global nav on squished screen

--- a/wp-content/themes/newmark/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/newmark/assets/styles/layouts/_header.scss
@@ -13,8 +13,14 @@ nav{
 		}
 	}
 	.navbar-header{
+		@include ipad{
+			width: 50%;
+		}
 		.navbar-brand{
 			padding-left: 0;
+			@include ipad{
+				width: 75%;
+			}
 			@include iphone6-plus-landscape{
 				width: 35%;
 			}
